fix menu overlap, closes #13

--- a/www/shiny.css
+++ b/www/shiny.css
@@ -60,6 +60,7 @@ h5 {
   cursor: pointer;  
   color: transparent;  
   height: 39px;
+  width: calc(100% - 44px);
 }
 
 .dropdown-active {
